# opsbrain-rag-cli

./: README.md  architecture.md  pyproject.toml  userguide.md
chroma_db/: chroma.sqlite3
data/: test.txt
opsbrain/: cli.py  config.py  requirements.txt
opsbrain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
opsbrain/app/: main.py  mlmodel.py  prompts.py  rag_chain.py  retriever.py
opsbrain/ingestion/: indexer.py  loaders.py
opsbrain/providers/: embeddings.py  llm.py
